JS_itemBoxTable__bodyCellInner--text -> JS_text

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -21,7 +21,7 @@
           <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner">
-                <i class="JS_itemBoxTable__bodyCellInner--text">{{group.name}}</i>
+                <i class="JS_text">{{group.name}}</i>
               </div>
             </li>
           </ul>
@@ -35,7 +35,7 @@
                         <div class="pmx-selector pmx-selector--readonly">
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">{{item}}</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item}}</div>
                             </div>
                           </div>
                         </div>
