--- a/_includes/blocks/app-nav-tab2.html
+++ b/_includes/blocks/app-nav-tab2.html
@@ -5,7 +5,7 @@
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
             <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                <div class= "itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                <div class= "itemBoxTable__bodyCellInner JS_text">
                   <input type="search" class="JS_appNav__filterInput" placeholder="filter through smarlists">
                 </div>
             </li>
@@ -31,7 +31,7 @@
               {% for item in group.items %}
               <ul class="itemBoxTable__bodyRow JS_filterableCell">
                 <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-                  <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">
+                  <div class="itemBoxTable__bodyCellInner JS_text">
                     <div class="pmx-selector pmx-selector--readonly">
                       <div class="pmx-selector__item">
                         <div class="pmx-selector__block">
