--- a/_includes/javascript/newSelectedItem--text.html
+++ b/_includes/javascript/newSelectedItem--text.html
@@ -1,1 +1,1 @@
-<div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--text">${textOfActionItem}</div>
+<div class="itemBoxTable__bodyCellInner JS_text">${textOfActionItem}</div>
