--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -71,7 +71,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Design</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
                                   </div>
                                 </div>
                               </div>
@@ -97,7 +97,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
                                   </div>
                                 </div>
                               </div>
@@ -150,7 +150,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Front-end</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
                                   </div>
                                 </div>
                               </div>
@@ -179,7 +179,7 @@
                                 <div class="pmx-selector__item">
                                   <div class="pmx-selector__block">
                                     <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Back-end</div>
+                                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
                                   </div>
                                 </div>
                               </div>
@@ -230,7 +230,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Design</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
                             </div>
                           </div>
                         </div>
@@ -251,7 +251,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Marketing</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
                             </div>
                           </div>
                         </div>
@@ -274,7 +274,7 @@
                           <div class="pmx-selector__item">
                             <div class="pmx-selector__block">
                               <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Front-end</div>
+                              <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
                             </div>
                           </div>
                         </div>
@@ -297,7 +297,7 @@
                       <div class="pmx-selector__item">
                         <div class="pmx-selector__block">
                           <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">Back-end</div>
+                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
                         </div>
                       </div>
                     </div>
