--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -41,7 +41,7 @@
                   <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                     <div class="itemBoxTable__bodyCellInner ">
 
-                      <div class="fnt JS_itemBoxTable__bodyCellInner--text">{{selected}}</div>
+                      <div class="fnt JS_text">{{selected}}</div>
 
                     </div>
                   </li>
@@ -111,7 +111,7 @@
                       <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--action JS_filterableCell">
                         <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
                           <div class="itemBoxTable__bodyCellInner">
-                            <div class="fnt JS_itemBoxTable__bodyCellInner--text">{{item.name}}</div>
+                            <div class="fnt JS_text">{{item.name}}</div>
                           </div>
                         </li>
                         {% if item.selected == "true" %}
