--- a/_includes/blocks/popup/ms-tags-colors-suggestions.html
+++ b/_includes/blocks/popup/ms-tags-colors-suggestions.html
@@ -9,7 +9,7 @@
               <div class="pmx-selector pmx-selector--readonly">
                 <div class="pmx-selector__item">
                   <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">{{item.name}}</div>
+                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
                   </div>
                 </div>
               </div>
