--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -4,7 +4,7 @@
     <div class="pmx-selector__item">
       <div class="pmx-selector__block">
         ${colorPrefixHTML}
-        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">${textOfActionItem}</div>
+        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">${textOfActionItem}</div>
       </div>
     </div>
   </div>
