--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -63,7 +63,7 @@
                           <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">next 2 weeks (12/03/18-25/03/18)</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                               </div>
                             </div>
                           </div>
@@ -81,7 +81,7 @@
                           <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">19/03/18-20/03/18</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                               </div>
                             </div>
                           </div>
@@ -123,7 +123,7 @@
                           <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">today</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
                               </div>
                             </div>
                           </div>
@@ -141,7 +141,7 @@
                           <div class="pmx-selector pmx-selector--readonly">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">18/04/18</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
                               </div>
                             </div>
                           </div>
@@ -199,7 +199,7 @@
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">today</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
                               </div>
                             </div>
                           </div>
@@ -241,7 +241,7 @@
                           <div class="pmx-selector  JS_toggle--calendar">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">18/04/18</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
                               </div>
                             </div>
                           </div>
@@ -283,7 +283,7 @@
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">19/03/18-20/03/18</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                               </div>
                             </div>
                           </div>
@@ -325,7 +325,7 @@
                           <div class="pmx-selector">
                             <div class="pmx-selector__item pmx-selector__item--selected">
                               <div class="pmx-selector__block ">
-                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_itemBoxTable__bodyCellInner--text">next 2 weeks (12/03/18-25/03/18)</div>
+                                <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                               </div>
                             </div>
                           </div>
