better col picker

--- a/_includes/popups/multiSelector-columnpicker.html
+++ b/_includes/popups/multiSelector-columnpicker.html
@@ -18,17 +18,38 @@
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow JS_multiSelector__box--selectionTitle">
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1">
+          <li class="
+            itemBoxTable__bodyCell
+            itemBoxTable__bodyCell--action
+
+            itemBoxTable__bodyCell--toggle" style="flex-grow: 1;" data-flex="1"
+          >
             <div class="itemBoxTable__bodyCellInner">
 
-              <div class="itemBoxTable__action itemBoxTable__action--toggle">ऄ Selected</div>
+              <div class="
+                itemBoxTable__action
+                itemBoxTable__action--toggle"
+              >ऄ Selected</div>
 
             </div>
           </li>
-          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0">
+          <li class="
+            itemBoxTable__bodyCell
+            itemBoxTable__bodyCell--flex0
+
+            itemBoxTable__bodyCell--remove
+            JS_itemBoxTable__bodyCell--removeAll" style="flex-grow: 0;" data-flex="0"
+          >
             <div class="itemBoxTable__bodyCellInner">
 
-              <div class="itemBoxTable__action itemBoxTable__action--remove JS_itemBoxTable__action--removeAll JS_itemBoxTable__action--removeAllSelected">—</div>
+              <div class="
+                itemBoxTable__action
+                itemBoxTable__action--secondary
+
+                itemBoxTable__action--remove
+                JS_itemBoxTable__action--removeAll
+                JS_itemBoxTable__action--removeAllSelected"
+              >—</div>
 
             </div>
           </li>
@@ -45,13 +66,13 @@
 
                     </div>
                   </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
                     <div class="itemBoxTable__bodyCellInner">
                       <div class="itemBoxTable__action itemBoxTable__action--drag">އ</div>
                     </div>
                   </li>
-                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
-                    <div class="itemBoxTable__bodyCellInner">
+                  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--action itemBoxTable__bodyCell--remove" style="flex-grow: 0;" data-flex="0">
+                    <div class="itemBoxTable__bodyCellInner itemBoxTable__bodyCellInner--action">
                       <div class="itemBoxTable__action itemBoxTable__action--remove">—</div>
                     </div>
                   </li>
