--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -28,6 +28,7 @@
     overflow: hidden;
     vertical-align: top;
     width: 100%;
+    background-color: #FFF;
 
     &::after {
       content: "";
@@ -66,7 +67,7 @@
       text-transform: uppercase;
       font-size: 14px;
       font-weight: 600;
-      font-style: italic;
+      font-style: normal;
       text-align: center;
       letter-spacing: 1px;
       transition: all .3s ease-in-out;
@@ -148,7 +149,7 @@
       &Shadow {
         position: absolute;
         top: 0;
-        width: 100px;
+        width: 100%;
         height: 100%;
         transition: all 0.5s ease-in-out;
         pointer-events: none;
@@ -164,7 +165,7 @@
 
         .tabs-nav__slideShadow {
           left: 0;
-          background: linear-gradient(to left, rgba(13, 53, 93, 0) 0%, rgb(13, 53, 93) 100%);
+          background: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
         }
 
         .tabs-nav__slideArrow {
@@ -181,7 +182,7 @@
 
         .tabs-nav__slideShadow {
           right: 0;
-          background: linear-gradient(to right, rgba(13, 53, 93, 0) 0%, rgb(13, 53, 93) 100%);
+          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
         }
 
         .tabs-nav__slideArrow {
@@ -198,11 +199,11 @@
 
 /* THEMES */
 
-.tabs--blue .tabs__nav {
-  background-color: #2c5386;
-}
-
 /* theme dark */
+.tabs--light .tabs-nav {
+  background-color: #2C5386;
+}
+/*
 .tabs--light .tabs-nav__slide--left .tabs-nav__slideArrow,
 .tabs--light .tabs-nav__slide--right .tabs-nav__slideArrow,
 .tabs--light .tabs-nav__slide--left .tabs-nav__slideCounter,
@@ -210,16 +211,18 @@
 .tabs--light .tabs-nav ul li:not(:last-child)::after,
 .tabs--light .tabs-nav__link,
 .tabs--light .tabs__panel {
-  color: #FFF;
+  color: #000;
 }
-.tabs--light .tabs-nav__linkBar {
-  background-color: #FFF;
-}
-
-/* theme gold */
-.tabs--gold .tabs-nav__link.tabs-nav__link--active {
+*/
+.tabs--light .tabs-nav__link.tabs-nav__link--active {
   color: #bf920b;
 }
-.tabs--gold .tabs-nav__linkBar {
+.tabs--light .tabs-nav__linkBar {
   background-color: #bf920b;
+}
+
+/* INVERT */
+
+.tabs--invert .tabs-nav {
+  filter: invert(1) hue-rotate(185deg) brightness(130%);
 }
