--- a/sass/app.scss
+++ b/sass/app.scss
@@ -8,11 +8,19 @@ body {
   font-family: 'tenforce', sans-serif;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "tenforce", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   */
-  font-family: -apple-system, BlinkMacSystemFont,
-                "tenforce", Helvetica, Arial, sans-serif,
-                "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family:  -apple-system,
+                BlinkMacSystemFont,
+                "Segoe UI",
+                "tenforce",
+                Helvetica,
+                Arial,
+                sans-serif,
+                "Apple Color Emoji",
+                "Segoe UI Emoji",
+                "Segoe UI Symbol";
+
   font-family: 'Source Sans Pro', sans-serif;
-  font-size: 14px;
+
   overflow-x: hidden;
   background-color: #4692C3;
   min-height: 100vh;
