Appnavbar: fixed tab link colors

--- a/sass/blocks/app-navigator.scss
+++ b/sass/blocks/app-navigator.scss
@@ -40,8 +40,16 @@
       display: none;
     }
 
-    .tabs__panel {
-      padding: 10px;
+    .tabs {
+
+      &__panel {
+        padding: 10px;
+      }
+      &-nav__link {
+        color: #FFF;
+      }
     }
+
+
   }
 }
