clean: removed useless JS_itemBoxTable__bodyCell--text classes

--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -34,7 +34,7 @@
       <div class="itemBoxBody">
         {% for item in site.data.multiselector-status.items %}
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
               <div class="itemBoxTable__bodyCellInner">
                 <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
