--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -28,7 +28,7 @@
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+          <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
 
               <div class="pmx-selector pmx-selector--readonly">
@@ -46,7 +46,7 @@
         </ul>
         <!-- /.itemBoxTable__bodyRow -->
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+          <li class="itemBoxTable__bodyCell " style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
 
               <div class="pmx-selector pmx-selector--readonly">
@@ -64,7 +64,7 @@
         </ul>
         <!-- /.itemBoxTable__bodyRow -->
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+          <li class="itemBoxTable__bodyCell  " style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
 
               <div class="pmx-selector pmx-selector--readonly">
@@ -82,7 +82,7 @@
         </ul>
         <!-- /.itemBoxTable__bodyRow -->
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell  JS_itemBoxTable__bodyCell--text" style="flex-grow: 1;" data-flex="1">
+          <li class="itemBoxTable__bodyCell  " style="flex-grow: 1;" data-flex="1">
             <div class="itemBoxTable__bodyCellInner">
 
               <div class="pmx-selector pmx-selector--readonly">
