Breadcrumb popup: added positioning

--- a/_includes/blocks/breadcrumbs.html
+++ b/_includes/blocks/breadcrumbs.html
@@ -1,9 +1,9 @@
 <div class="breadcrumbs breadcrumbs--overflow">
-  <div class="breadcrumbs__item">
+  <div class="breadcrumbs__item JS_breadcrumbs__item">
     <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
         <div class="pmx-selector__block">
-          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Doelstelling</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">Doelstelling</div>
         </div>
       </div>
     </div>
@@ -12,11 +12,11 @@
     </div>
   </div>
 
-  <div class="breadcrumbs__item">
+  <div class="breadcrumbs__item JS_breadcrumbs__item">
     <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
         <div class="pmx-selector__block">
-          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Mijlpaal</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">Mijlpaal</div>
         </div>
       </div>
     </div>
@@ -25,11 +25,11 @@
     </div>
   </div>
 
-  <div class="breadcrumbs__item">
+  <div class="breadcrumbs__item JS_breadcrumbs__item">
     <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
         <div class="pmx-selector__block">
-          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Doelstelling</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">Doelstelling</div>
         </div>
       </div>
     </div>
@@ -38,11 +38,11 @@
     </div>
   </div>
 
-  <div class="breadcrumbs__item">
+  <div class="breadcrumbs__item JS_breadcrumbs__item">
     <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
         <div class="pmx-selector__block">
-          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Mijlpaal</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">Mijlpaal</div>
         </div>
       </div>
     </div>
@@ -51,11 +51,11 @@
     </div>
   </div>
 
-  <div class="breadcrumbs__item">
+  <div class="breadcrumbs__item JS_breadcrumbs__item">
     <div class="pmx-selector">
       <div class="pmx-selector__item pmx-selector__item--selected">
         <div class="pmx-selector__block">
-          <div class="pmx-selector__blockPart pmx-selector__blockPart--label">Mijlpaal</div>
+          <div class="pmx-selector__blockPart pmx-selector__blockPart--label MULTISELECT__POPUP JS_breadcrumbPopup" data-popid="#multiSelector-breadcrumb">Mijlpaal</div>
         </div>
       </div>
     </div>
