--- a/sass/components/multiSelector.scss
+++ b/sass/components/multiSelector.scss
@@ -37,6 +37,10 @@
       width: 50vw;
     }
 
+    &-breadcrumb {
+      width: 50vw;
+    }
+
     .itemBox {
       color: #000;
       background-color: rgba(0, 0, 0, 0.17);
