LoadMore: added seperate html

--- a/_includes/blocks/app-nav-tab1.html
+++ b/_includes/blocks/app-nav-tab1.html
@@ -47,11 +47,7 @@
             </div>
           </div>
         {% endfor %}
-        <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore">
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
-            <div class="itemBoxTable__bodyCellInner">Load <span>18</span> more</div>
-          </li>
-        </ul>
+        {% include blocks/popup/ms-load-more.html %}
       </div>
     </div>
   </div>
