Breadcrumb popup: added load more button

--- a/_includes/popups/singleSelect-breadcrumb.html
+++ b/_includes/popups/singleSelect-breadcrumb.html
@@ -28,6 +28,7 @@
             </li>
           </ul>
         {% endfor %}
+        {% include blocks/popup/ms-load-more.html %}
       </div>
     </div>
   </div>
