--- a/_includes/blocks/item-header.html
+++ b/_includes/blocks/item-header.html
@@ -19,14 +19,14 @@
     </div>
 
     <div class="item-header__action">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector">
-        <div class="pmx-selector__item JS_selectorItem JS_toggle-progress">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleselect JS_selector pmx-selector--required">
+        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-progress">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">च</div>
           </div>
         </div>
         <div class="pmx-selector__itemSeperator"></div>
-        <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_toggle-comments">
+        <div class="pmx-selector__item  JS_selectorItem JS_toggle-comments">
           <div class="pmx-selector__block">
             <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix">ރ</div>
             <div class="pmx-selector__blockPart pmx-selector__blockPart--counter"><sup>11</sup></div>
