Columnpicker: added add/remove action on text in bodyRow

--- a/_includes/javascript/newSelectedItem--text.html
+++ b/_includes/javascript/newSelectedItem--text.html
@@ -1,1 +1,3 @@
-<div class="itemBoxTable__bodyCellInner JS_text">${textOfActionItem}</div>
+<div class="itemBoxTable__bodyCellInner ">
+  <div class="fnt JS_text">${textOfActionItem}</div>
+</div>
