--- a/_includes/javascript/newSelectedItem.html
+++ b/_includes/javascript/newSelectedItem.html
@@ -1,5 +1,5 @@
 <ul class="itemBoxTable__bodyRow JS_filterableCell">
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;">
+  <li class="itemBoxTable__bodyCell ${textActionClass}" style="flex-grow: 1;">
     ${newSelectedItemHTML}
   </li>
   <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--draggable" style="flex-grow: 0;" data-flex="0">
