update tooltip/error messages on components page

--- a/_includes/javascript/itemSelected.html
+++ b/_includes/javascript/itemSelected.html
@@ -1,4 +1,4 @@
-<li class="itemBoxTable__bodyCell JS_showSelected" style="flex-grow: 0;" data-flex="0">
+<li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex0 JS_showSelected">
   <div class="itemBoxTable__bodyCellInner">
     <i class="itemBoxTable__action ">✓</i>
   </div>
