--- a/sass/shared.scss
+++ b/sass/shared.scss
@@ -31,6 +31,7 @@
 @import "components/itemBox.css";
 @import "components/pmx-selector.css";
 @import "components/pmx-link.css";
+@import "components/pmx-note.css";
 @import "components/multiSelector.css";
 
 // temporary, because of js
