--- a/_includes/popups/multiSelector-status.html
+++ b/_includes/popups/multiSelector-status.html
@@ -1,18 +1,5 @@
 <div class="multiSelector multiSelector--popup" id="multiSelector-1">
 
-  <div class="pmx-field__handlers">
-    <div class="pmx-field__handler pmx-field__handler--error">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
-    <div class="pmx-field__handler pmx-field__handler--action">
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-    </div>
-    <div class="pmx-field__handler pmx-field__handler--tooltip">
-      <p>Actual invoice amount</p>
-      <p>For fixed price projects and service requests (no timesheets): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
-    </div>
-  </div>
-
   <div class="itemBox JS_multiSelector__box">
     <div class="itemBoxTable">
       <div class="itemBoxBody">
@@ -29,12 +16,43 @@
     </div>
   </div>
 
+  <div class="itemBox">
+    <div class="itemBoxTable">
+      <div class="itemBoxBody">
+        <ul class="itemBoxTable__bodyRow">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--custom">
+            <div class="itemBoxTable__bodyCellInner">
+
+              <div class="pmx-note pmx-note--error">
+                <p>Item could not be selected. <a href="#">Read more</a></p>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+        <ul class="itemBoxTable__bodyRow">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--custom">
+            <div class="itemBoxTable__bodyCellInner">
+
+              <div class="pmx-note pmx-note--info">
+                <p>Actual invoice amount</p>
+                <p>For fixed price projects and service requests (no timesheets): when you change the status to 'to be invoiced', please insert the exact amount that needs to be invoiced.</p>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- /.itemBox -->
+
   <div class="itemBox JS_multiSelector__box--optionsChildren">
     <div class="itemBoxTable">
       <div class="itemBoxBody">
         {% for item in site.data.multiselector-status.items %}
           <ul class="itemBoxTable__bodyRow JS_filterableCell">
-            <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+            <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
               <div class="itemBoxTable__bodyCellInner">
                 <div class="pmx-selector pmx-selector--readonly">
                   <div class="pmx-selector__item">
